[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-solochain-template.git"
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/template",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.10" }
clap-num = { version = "1.0.2" }
clap_complete = { version = "4.5.13" }
futures = { version = "0.3.30" }
futures-channel = { version = "0.3.23" }
futures-timer = { version = "3.0.2" }
futures-util = { version = "0.3.30", default-features = false }
serde = { version = "1.0.209", default-features = false }
serde-big-array = { version = "0.3.2" }
serde_derive = { version = "1.0.117" }
serde_json = { version = "1.0.127", default-features = false }
serde_yaml = { version = "0.9" }
jsonpath_lib = { version = "0.3" }
jsonrpsee = { version = "0.24.3" }
jsonrpsee-core = { version = "0.24.3" }
k256 = { version = "0.13.3", default-features = false }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sp-core={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sc-executor={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sc-network={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sc-service={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sc-telemetry={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sc-transaction-pool={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sc-transaction-pool-api={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sc-offchain={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sc-consensus-aura={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sp-consensus-aura={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sc-consensus={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sc-consensus-grandpa={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sp-consensus-grandpa={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sc-client-api={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sc-basic-authorship={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sp-runtime={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sp-io={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sp-timestamp={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sp-inherents={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sp-keyring={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sp-api={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sp-blockchain={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sp-block-builder={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
frame-system={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
frame-metadata-hash-extension={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
pallet-transaction-payment={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
pallet-transaction-payment-rpc={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
substrate-frame-rpc-system={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
frame-benchmarking-cli={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
# solochain-template-runtime={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
solochain-template-runtime={path = "runtime"}
substrate-build-script-utils={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}

codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }

scale-info = { version = "2.11.1", default-features = false }

frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
frame-executive={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
pallet-aura={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
pallet-balances={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
pallet-grandpa={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
pallet-sudo={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
pallet-timestamp={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sp-offchain={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sp-session={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sp-storage={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sp-transaction-pool={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sp-version = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
sp-genesis-builder={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
frame-system-rpc-runtime-api={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
pallet-transaction-payment-rpc-runtime-api={ git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}
pallet-template={path = "pallets/template",default-features = false}

substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false}

# layer 2
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false }
pallet-babe = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false }
# polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false }
sp-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false }
pallet-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false }
pallet-staking-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false }
# node-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk.git",branch = "stable2409",default-features = false }